Fixed Bottom Scrollbar Bug

--- a/src/App.css
+++ b/src/App.css
@@ -569,6 +569,10 @@ td {
   font-family: 'PixelFont';
 }
 
+.width90 {
+  width: 90%;
+}
+
 .width100 {
   width: 100%;
 }
